--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const base: string = import.meta.env.BASE_URL || '/';
       <li class="ms-6 mb-10">
         <div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full bg-brand"></div>
         <time class="text-xs text-gray-500">1999</time>
-        <h3 class="font-medium">Início com Clipper Summer 87 e Visual Basic 3</h3>
+        <h3 class="font-medium">Início com Clipper Summer 87 e Visual Basic 3, banco de dados nessa época era dBase e Microsft Access, inicei na época dos programas de aluguél de fitas em locadoras, se você não sabe o que é isso, provavelmente você é muito novo para isso.</h3>
       </li>
       <li class="ms-6 mb-10">
         <div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full bg-brand"></div>
