feat: add configuration files for VSCode and update blog post content

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,18 +58,18 @@ const base: string = import.meta.env.BASE_URL || '/';
       <li class="ms-6 mb-10">
         <div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full bg-brand"></div>
         <time class="text-xs text-gray-500">1999</time>
-        <h3 class="font-medium">Início com Clipper Summer 87 e Visual Basic 3, banco de dados nessa época era dBase e Microsft Access, inicei na época dos programas de aluguél de fitas em locadoras, se você não sabe o que é isso, provavelmente você é muito novo para isso.</h3>
+        <h3 class="font-medium">Comecei minha trajetória em programação com Clipper Summer 87 e Visual Basic 3, utilizando bancos de dados como dBase e Microsoft Access. No início da carreira, desenvolvi sistemas para locadoras de vídeo, uma experiência marcante para quem acompanhou a evolução da tecnologia desde os anos 90. Se você não lembra dessa época, provavelmente é de uma geração mais recente!</h3>
       </li>
       <li class="ms-6 mb-10">
         <div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full bg-brand"></div>
         <time class="text-xs text-gray-500">2002 → hoje</time>
         <h3 class="font-medium">.NET desde 1.0 até .NET 10</h3>
-        <p class="text-gray-700">Acompanhou os eventos no Brasil desde o nascimento da plataforma.</p>
+        <p class="text-gray-700">Acompanhei os eventos no Brasil desde o nascimento da plataforma aqui no Brasil, até virem os Microsoft TechEd.</p>
       </li>
       <li class="ms-6 mb-10">
         <div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full bg-brand"></div>
         <time class="text-xs text-gray-500">2005 → 2016</time>
-        <h3 class="font-medium">AJAX, Atlas, jQuery, ASP.NET WebForms e MVC</h3>
+        <h3 class="font-medium">AJAX, Atlas, jQuery, ASP.NET WebForms e MVC, Angular JS, Ext JS</h3>
       </li>
       <li class="ms-6 mb-10">
         <div class="absolute -start-1.5 mt-1.5 h-3 w-3 rounded-full bg-brand"></div>
